# digital_earth_edu

./: .gitignore  CMakeLists.txt  readme.md
data/dem_geotiff/: alwdgg.aux  alwdgg.tif.aux.xml  alwdgg.tif.rrd  alwdgg.tif.xml
others/Icosahedron/: sl1.ncb  sl1.sln
others/Icosahedron/Debug/: sl1.ilk
others/Icosahedron/sl1/: TriFace.cpp  TriFace.h  sl1.vcproj  slc.cpp  sphere.txt
others/Icosahedron/sl1/Debug/: BuildLog.htm  mt.dep  vc90.idb
src/: DataIO.cpp  ElevationAndTexture.cpp  TriFace.cpp  main.cpp
src/includes/: DataIO.h  ElevationAndTexture.h  TriFace.h  gdal2cv.h  utils.h
utils/: global_DEM_8bit_1band_2.xml  readWMS.cpp  utils.cpp  world.200412.3x5400x2700.jpg.aux.xml
